--- a/flash_sacco/funds/transfer/templates/transfer/confirm/index.html
+++ b/flash_sacco/funds/transfer/templates/transfer/confirm/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Traveler - Success payment</title>
+    <title>Flash : Successful Transfer</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta name="author" content="DarthVader">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../..{% static "/css/font-awesome.css" %}">
     <link rel="stylesheet" href="../..{% static "/css/icomoon.css" %}">
     <link rel="stylesheet" href="../..{% static "/css/styles.css" %}">
-            <script src="../..{% static "/js/modernizr.js" %}"></script>
+    <script src="../..{% static "/js/modernizr.js" %}"></script>
 
 
 </head>
