--- a/flash_sacco/funds/user/templates/user/index.html
+++ b/flash_sacco/funds/user/templates/user/index.html
@@ -43,27 +43,72 @@
                 <div class="col-md-3">
                     <aside class="user-profile-sidebar">
                         <div class="user-profile-avatar text-center">
+                            {% load static %}
                             <img src="..{% static "/img/300x300.png" %}" alt="Image Alternative text" title="AMaze" />
-                            <h5>Wanaume Self-Help Group</h5>
+                            <h5>{{ request.session.username }}</h5>
                             <p>Member Since May 2017</p>
                         </div>
                         <ul class="list user-profile-nav">
-                            <li><a href="{% url 'user:profile'%}?uname='charles'"><i class="fa fa-user"></i>Overview</a>
+                            <li><a href="{% url 'user:index'%}"><i class="fa fa-user"></i>Overview</a>
                             </li>
-                            <li><a href="members.html"><i class="fa fa-cog"></i>Group Account Members</a>
+                            <li><a href="{% url 'user:members'%}"><i class="fa fa-cog"></i>Group Account Members</a>
                             </li>
-                            <li><a href="loans.html"><i class="fa fa-money"></i>Loan Applications</a>
+                            <li><a href="{% url 'user:loans'%}"><i class="fa fa-money"></i>Loan Applications</a>
                             </li>
-                            <li><a href="history.html"><i class="fa fa-clock-o"></i>Account History</a>
+                            <li><a href="{% url 'user:history'%}"><i class="fa fa-clock-o"></i>Account History</a>
                             </li>
-                            <li><a href="cards.html"><i class="fa fa-credit-card"></i>Credit/Debit Cards</a>
-                            </li>
+
 
                         </ul>
                     </aside>
                 </div>
                 <div class="col-md-9">
+                <div class="row">
 
+                    <div class="col-md-5">
+                        <h4>Personal Information</h4>
+                        <div class="form-group form-group-icon-left"><label>First Name</label>
+                                   {{ request.session.username }}
+                                </div>
+
+                        <div class="form-group form-group-icon-left"><label>First Name</label>
+                                   {{ request.session.username }}
+                                </div>
+                        <div class="form-group form-group-icon-left"><label>Account Balance</label>
+                                   {{ request.session.userAccBal }}
+                                </div>
+
+
+                        <div class="form-group form-group-icon-left"><label>Balance</label>
+                                   {{ request.session.username }}
+                                </div>
+
+
+
+
+                    </div>
+
+                    <div class="col-md-4 col-md-offset-1">
+                            <h4>Change Password</h4>
+                            <form>
+                                <div class="form-group form-group-icon-left"><i class="fa fa-lock input-icon"></i>
+                                    <label>Current Password</label>
+                                    <input class="form-control" type="password">
+                                </div>
+                                <div class="form-group form-group-icon-left"><i class="fa fa-lock input-icon"></i>
+                                    <label>New Password</label>
+                                    <input class="form-control" type="password">
+                                </div>
+                                <div class="form-group form-group-icon-left"><i class="fa fa-lock input-icon"></i>
+                                    <label>New Password Again</label>
+                                    <input class="form-control" type="password">
+                                </div>
+                                <hr>
+                                <input class="btn btn-primary" type="submit" value="Change Password">
+                            </form>
+                        </div>
+
+                </div>
 
                 </div>
             </div>
@@ -71,13 +116,12 @@
 
 
         <div class="gap"></div>
-
+        {% load static %}
         <script src="..{% static "/js/bootstrap.js" %}"></script>
         <script src="..{% static "/js/slimmenu.js" %}"></script>
         <script src="..{% static "/js/bootstrap-datepicker.js" %}"></script>
         <script src="..{% static "/js/bootstrap-timepicker.js" %}"></script>
         <script src="..{% static "/js/nicescroll.js" %}"></script>
-
         <script src="..{% static "/js/owl-carousel.js" %}"></script>
         <script src="..{% static "/js/fitvids.js" %}"></script>
         <script src="..{% static "/js/tweet.js" %}"></script>
