--- a/user/templates/user/loans.html
+++ b/user/templates/user/loans.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>Login/Register</title>
+    <title>User Account</title>
 
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
@@ -17,10 +17,10 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600' rel='stylesheet' type='text/css'>
     <!-- /GOOGLE FONTS -->
     {% load static %}
-    <link rel="stylesheet" href="..{% static "/css/bootstrap.css" %}">
-    <link rel="stylesheet" href="..{% static "/css/font-awesome.css" %}">
-    <link rel="stylesheet" href="..{% static "/css/icomoon.css" %}">
-    <link rel="stylesheet" href="..{% static "/css/styles.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/bootstrap.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/font-awesome.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/icomoon.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/styles.css" %}">
 
 </head>
 
@@ -28,29 +28,49 @@
 
     <div class="global-wrap">
         <header id="main-header">
-  
+
         </header>
 
         <div class="container">
-            <h1 class="page-title">Transfer Funds</h1>
+            <h1 class="page-title">User Profile</h1>
         </div>
-{{ AccNo }}
+
+
+
 
         <div class="container">
-            <div class="row" data-gutter="60">
-                <div class="col-md-4">
-                    <h3>Welcome {{ username.userAccName }}.</h3>
-                    <p>We are a public SME banking operator and ground handler. Our advantage is being small enough to treat every small client as an individual and not just the statistics.</p>
-                    <p>Our packages are planned to suit clients looking for a comfortable standard of saving and withdrawals together with an informative guide coupled with an impressive track record.</p>
+            <div class="row">
+                  <div class="col-md-3">
+                    <aside class="user-profile-sidebar">
+                        <div class="user-profile-avatar text-center">
+                            {% load static %}
+                            <img src="{{ DBobj.image.url }}" alt="Image Alternative text" title="AMaze" />
+                            <h5>{{ DBobj.firstName }}</h5>
+                            <p>Member Since {{ DBobj.register_date }}</p>
+                        </div>
+                     <ul class="list user-profile-nav">
+                            <li><a href="{% url 'user:index'%}"><i class="fa fa-user"></i>Overview</a>
+                            </li>
+                            <li><a href="{% url 'user:profileupdate'  DBobj.id %}"><i class="fa fa-user"></i>Settings</a>
+                            </li>
+                            <li><a href="{% url 'user:members'%}"><i class="fa fa-cog"></i>Group Account</a>
+                            </li>
+                            <li><a href="{% url 'user:loans'%}"><i class="fa fa-money"></i>Loan Applications</a>
+                            </li>
+                            <li><a href="{% url 'user:history'%}"><i class="fa fa-clock-o"></i>Account History</a>
+                            </li>
+
+
+                        </ul>
+                    </aside>
                 </div>
-                
+                <div class="col-md-9">
 
+                        <div class="col-md-5">
+                            <h4>Apply for a loan</h4>
 
-                <div class="col-md-4">
-                    <h3>Transfer Money :::: </h3>
+<form method="post"  enctype="multipart/form-data">
 
-
-                    <form action="{% url 'transfer:formHandler' username.id%}" method="POST">
                          {% csrf_token %}
                         {% for field in form %}
     <div class="form-group form-group-icon-left"><i class="fa fa-user input-icon input-icon-show"></i>
@@ -58,46 +78,25 @@
     {{ field.as_widget }}
     </div>
 {% endfor %}
-<div class="checkbox">
-<label>
-    <input name="remember" autocomplete="off" type="checkbox">Confirm  Transaction!</label>
-</div>
-      <input type="hidden" name="subinput" value="1">
-    <input class="btn btn-primary" required autocomplete="off" type="submit" value="Send" />
+
+<hr>
+<input class="btn btn-primary" type="submit" value="Send Application">
 </form>
-</div>
+                        </div>
+                    <div class="col-md-4">
+                        <h4>Loan Details</h4>
 
-<div class="col-md-4">
-<h3> User  Details</h3>
-    <div class="form-group form-group-icon-left">
-        <h4>Account Name</h4>
-  <p>{{ recn }}</p>
-    </div>
+                        </div>
 
-	    <div class="form-group form-group-icon-left">
-        <h4>Account Number</h4>
-  <p>  {{ username.userAccNo }}</p>
-    </div>
-	
-	    <div class="form-group form-group-icon-left">
-        <h4>Account Balance</h4>
-  <p>{{ username.userAccBal }}</p>
-    </div>
-	
-	    <div class="form-group form-group-icon-left">
-        <h4>Date </h4>
-  <p>Wanaiume Self Help Group</p>
-    </div>
-	
+
                 </div>
-				
-				
             </div>
         </div>
 
+
         <div class="gap"></div>
- 
-       	{% load static %}
+
+		{% load static %}
         <script src="../..{% static "/js/bootstrap.js" %}"></script>
         <script src="../..{% static "/js/jquery.js" %}"></script>
         <script src="../..{% static "js/bootstrap.js"%}"></script>
@@ -119,7 +118,6 @@
         <script src="../..{% static "js/countdown.js"%}"></script>
         <script src="../..{% static "js/gridrotator.js"%}"></script>
         <script src="../..{% static "js/custom.js"%}"></script>
-
     </div>
 </body>
 
