--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>Savings</title>
+    <title>User Account</title>
 
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
@@ -17,10 +17,10 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600' rel='stylesheet' type='text/css'>
     <!-- /GOOGLE FONTS -->
     {% load static %}
-    <link rel="stylesheet" href="..{% static "/css/bootstrap.css" %}">
-    <link rel="stylesheet" href="..{% static "/css/font-awesome.css" %}">
-    <link rel="stylesheet" href="..{% static "/css/icomoon.css" %}">
-    <link rel="stylesheet" href="..{% static "/css/styles.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/bootstrap.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/font-awesome.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/icomoon.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/styles.css" %}">
 
 </head>
 
@@ -32,51 +32,46 @@
         </header>
 
         <div class="container">
-            <h1 class="page-title">Savings Details </h1>
+            <h1 class="page-title">User Profile</h1>
         </div>
-{{ AccNo }}
+
+
+
 
         <div class="container">
-            <div class="row" data-gutter="60">
-                <div class="col-md-4">
-                    <h3>Welcome.</h3>
-                    <p>We are a public SME banking operator and ground handler. Our advantage is being small enough to treat every small client as an individual and not just the statistics.</p>
-                    <p>Our packages are planned to suit clients looking for a comfortable standard of saving and withdrawals together with an informative guide coupled with an impressive track record.</p>
+            <div class="row">
+                  <div class="col-md-3">
+                    <aside class="user-profile-sidebar">
+                        <div class="user-profile-avatar text-center">
+                            {% load static %}
+                            <img src="{{ DBobj.image.url }}" alt="Image Alternative text" title="AMaze" />
+                            <h5>{{ DBobj.firstName }}</h5>
+                            <p>Member Since {{ DBobj.register_date }}</p>
+                        </div>
+                     <ul class="list user-profile-nav">
+                            <li><a href="{% url 'user:index'%}"><i class="fa fa-user"></i>Overview</a>
+                            </li>
+                            <li><a href="{% url 'user:profileupdate'  DBobj.id %}"><i class="fa fa-user"></i>Settings</a>
+                            </li>
+                            <li><a href="{% url 'user:members'%}"><i class="fa fa-cog"></i>Group Account</a>
+                            </li>
+                            <li><a href="{% url 'user:loans'%}"><i class="fa fa-money"></i>Loan Applications</a>
+                            </li>
+                            <li><a href="{% url 'user:history'%}"><i class="fa fa-clock-o"></i>Account History</a>
+                            </li>
+
+
+                        </ul>
+                    </aside>
                 </div>
+                <div class="col-md-9">
 
-
-
-                <div class="col-md-4">
-                    <h3>Savings Details{{ username }} </h3>
-
-
-</div>
-
-<div class="col-md-4">
-<h3> User  Details</h3>
-    <div class="form-group form-group-icon-left">
-        <h4>Account Name</h4>
-  <p>{{ request.session.username }}</p>
-    </div>
-
-	    <div class="form-group form-group-icon-left">
-        <h4>Account Number</h4>
-  <p>  {{ request.session.userAccNo }}</p>
-    </div>
-
-	    <div class="form-group form-group-icon-left">
-        <h4>Account Balance</h4>
-  <p>{{ request.session.userbal }}</p>
-    </div>
 
 
 
                 </div>
-
-
             </div>
         </div>
-
 
 
         <div class="gap"></div>
