--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -29,10 +29,7 @@
         <div class="container">
             <h1 class="page-title">User Profile</h1>
         </div>
-
-
-
-        <div class="container">
+     <div class="container">
             <div class="row">
                 <div class="col-md-3">
                     <aside class="user-profile-sidebar">
@@ -45,16 +42,18 @@
                      <ul class="list user-profile-nav">
                             <li><a href="{% url 'user:index'%}"><i class="fa fa-user"></i>Overview</a>
                             </li>
-                            <li><a href="{% url 'user:profileupdate'  DBobj.id %}"><i class="fa fa-user"></i>Settings</a>
+                            <li><a href="{% url 'user:profileupdate'  DBobj.id %}"><i class="fa fa-cog"></i>Settings</a>
                             </li>
-                            <li><a href="{% url 'user:members'%}"><i class="fa fa-cog"></i>Group Account</a>
+                         <li><a href="{% url 'user:shares'%}"><i class="fa fa-cog"></i>Shares</a>
+                            </li>
+                            <li><a href="{% url 'user:members'%}"><i class="fa fa-group"></i>Group Account</a>
                             </li>
                             <li><a href="{% url 'user:loans'%}"><i class="fa fa-money"></i>Loan Applications</a>
                             </li>
                             <li><a href="{% url 'user:history'%}"><i class="fa fa-clock-o"></i>Account History</a>
                             </li>
 
-
+{{ message }}
                         </ul>
                     </aside>
                 </div>
