--- a/user/templates/user/settings.html
+++ b/user/templates/user/settings.html
@@ -1,29 +1,35 @@
+
+
+
 <!DOCTYPE HTML>
 <html>
 
 <head>
     <title>User Account</title>
+
+
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <meta name="keywords" content="html" />
-    <meta name="author" content="Flash Sacco">
+    <meta name="keywords" content="html, Msafiri" />
+    <meta name="author" content="msafiri">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- GOOGLE FONTS -->
+  <!-- GOOGLE FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600' rel='stylesheet' type='text/css'>
     <!-- /GOOGLE FONTS -->
-
     {% load static %}
-        <link rel="stylesheet" href="../..{% static "/css/bootstrap.css" %}">
+    <link rel="stylesheet" href="../..{% static "/css/bootstrap.css" %}">
     <link rel="stylesheet" href="../..{% static "/css/font-awesome.css" %}">
     <link rel="stylesheet" href="../..{% static "/css/icomoon.css" %}">
     <link rel="stylesheet" href="../..{% static "/css/styles.css" %}">
-
 
 </head>
 
 <body>
 
     <div class="global-wrap">
+        <header id="main-header">
+
+        </header>
 
         <div class="container">
             <h1 class="page-title">User Profile</h1>
@@ -34,7 +40,7 @@
 
         <div class="container">
             <div class="row">
-               <div class="col-md-3">
+                  <div class="col-md-3">
                     <aside class="user-profile-sidebar">
                         <div class="user-profile-avatar text-center">
                             {% load static %}
@@ -42,12 +48,15 @@
                             <h5>{{ DBobj.firstName }}</h5>
                             <p>Member Since {{ DBobj.register_date }}</p>
                         </div>
-                     <ul class="list user-profile-nav">
+
+                    <ul class="list user-profile-nav">
                             <li><a href="{% url 'user:index'%}"><i class="fa fa-user"></i>Overview</a>
                             </li>
-                            <li><a href="{% url 'user:profileupdate'  DBobj.id %}"><i class="fa fa-user"></i>Settings</a>
+                            <li><a href="{% url 'user:profileupdate'  DBobj.id %}"><i class="fa fa-cog"></i>Settings</a>
                             </li>
-                            <li><a href="{% url 'user:members'%}"><i class="fa fa-cog"></i>Group Account</a>
+                         <li><a href="{% url 'user:shares'%}"><i class="fa fa-cog"></i>Shares</a>
+                            </li>
+                            <li><a href="{% url 'user:members'%}"><i class="fa fa-group"></i>Group Account</a>
                             </li>
                             <li><a href="{% url 'user:loans'%}"><i class="fa fa-money"></i>Loan Applications</a>
                             </li>
@@ -60,7 +69,8 @@
                 </div>
                 <div class="col-md-9">
 
-                                  <div class="row">
+
+        <div class="row">
                         <div class="col-md-5">
 
 
@@ -77,6 +87,17 @@
                                 <p class="text-small">{{ error }}</p>
                             </div>
 {% endif %}
+
+                         {% for error in field.errors %}
+     <div class="row">
+          <div class="alert alert-danger">
+                                <button class="close" type="button" data-dismiss="alert"><span aria-hidden="true">×</span>
+                                </button>
+                                <p class="text-small">{{ error }}</p>
+                            </div>
+     </div>
+ {% endfor %}
+
                             <form action="" method="post">
                                 <h4>Personal Infomation</h4>
                         {% csrf_token %}
@@ -109,15 +130,13 @@
                     </div>
 
                 </div>
-
-		 </div>
+            </div>
         </div>
-
 
 
         <div class="gap"></div>
 
-        {% load static %}
+		{% load static %}
         <script src="../..{% static "/js/bootstrap.js" %}"></script>
         <script src="../..{% static "/js/jquery.js" %}"></script>
         <script src="../..{% static "js/bootstrap.js"%}"></script>
